# rospy_package_example

./: CMakeLists.txt  package.xml  setup.py
scripts/: do_something
src/rospy_example/: do_something.py  handy_things.py  more_handy_things.py
